welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: not found: value avancer
	{ avancer(); nbPas = nbPas + 1;
          ^