welcome.lessons.welcome.variables.Variables.scala.code
var nbPas = 0
while (!estSurBiscuit())
	{ avancer(); nbPas = nbPas + 1;
	}
